package net.combatserver.protobuf; 
import "DataStructures.proto";

option optimize_for = SPEED;  

message NewUserNoticeData {
	required User user = 1;
}