package net.combatserver.protobuf; 
import "DataStructures.proto";

option optimize_for = SPEED;  

message RoomListNoticeData {
	repeated Room room = 1;
}
