package net.combatserver.protobuf; 

option optimize_for = SPEED;  

message UserLeaveNoticeData {
	required int32 userid = 1;
}