package net.combatserver.protobuf; 
import "DataStructures.proto";

option optimize_for = SPEED;  

message UserListNoticeData {
	repeated User user = 1;
}